[gd_scene load_steps=4 format=3 uid="uid://d8q36mc1y2fk"]

[ext_resource type="Script" path="res://PauseMenuOptions/PauseMenuOptions.gd" id="1_7gaeq"]
[ext_resource type="FontFile" uid="uid://cwpvefewls5sl" path="res://Assets/Fonts/ReemKufiInk-Regular.ttf" id="2_ktrah"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs1th"]
bg_color = Color(0.333333, 0.439216, 0.788235, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.411765, 0.627451, 0.792157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 10
shadow_offset = Vector2(5, -5)

[node name="PauseMenuOptions" type="Panel"]
custom_minimum_size = Vector2i(500, 350)
offset_right = 250.0
offset_bottom = 225.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bs1th")
script = ExtResource("1_7gaeq")

[node name="LeftVBox" type="VBoxContainer" parent="."]
offset_right = 500.0
offset_bottom = 312.0

[node name="Control" type="Control" parent="LeftVBox"]
custom_minimum_size = Vector2i(0, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 10.0

[node name="Title" type="Label" parent="LeftVBox"]
offset_top = 14.0
offset_right = 500.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 24
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LeftVBox"]
custom_minimum_size = Vector2i(500, 200)
offset_top = 58.0
offset_right = 500.0
offset_bottom = 258.0
size_flags_horizontal = 0

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer"]
custom_minimum_size = Vector2i(25, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 25.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="LeftVBox/HBoxContainer"]
custom_minimum_size = Vector2i(250, 0)
offset_left = 29.0
offset_right = 279.0
offset_bottom = 200.0

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 10.0

[node name="LanguageLabel" type="Label" parent="LeftVBox/HBoxContainer/VBoxContainer"]
offset_top = 14.0
offset_right = 250.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 16
text = "LanguageLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 25)
layout_mode = 3
anchors_preset = 0
offset_top = 46.0
offset_right = 250.0
offset_bottom = 71.0

[node name="FullScreenLabel" type="Label" parent="LeftVBox/HBoxContainer/VBoxContainer"]
offset_top = 75.0
offset_right = 250.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 16
text = "FullScreenLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control4" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 25)
layout_mode = 3
anchors_preset = 0
offset_top = 107.0
offset_right = 250.0
offset_bottom = 132.0

[node name="VolumeLabel" type="Label" parent="LeftVBox/HBoxContainer/VBoxContainer"]
offset_top = 136.0
offset_right = 250.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 16
text = "VolumeLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="LeftVBox/HBoxContainer"]
custom_minimum_size = Vector2i(200, 0)
offset_left = 283.0
offset_right = 483.0
offset_bottom = 200.0

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(0, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 10.0

[node name="LanguageButton" type="OptionButton" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(150, 0)
offset_left = 25.0
offset_top = 14.0
offset_right = 175.0
offset_bottom = 47.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ktrah")
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Espa√±ol"
popup/item_1/id = 1

[node name="Control2" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(0, 25)
layout_mode = 3
anchors_preset = 0
offset_top = 51.0
offset_right = 200.0
offset_bottom = 76.0

[node name="HBoxContainer" type="HBoxContainer" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
offset_top = 80.0
offset_right = 200.0
offset_bottom = 104.0

[node name="Control" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2i(75, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 75.0
offset_bottom = 24.0

[node name="FullScreenButton" type="CheckButton" parent="LeftVBox/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_direction = 3
offset_left = 77.0
offset_right = 121.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_ktrah")

[node name="Control4" type="Control" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(0, 30)
layout_mode = 3
anchors_preset = 0
offset_top = 108.0
offset_right = 200.0
offset_bottom = 138.0

[node name="VolumeSlider" type="HSlider" parent="LeftVBox/HBoxContainer/VBoxContainer2"]
offset_top = 142.0
offset_right = 200.0
offset_bottom = 158.0

[node name="ReturnButton" type="Button" parent="LeftVBox"]
custom_minimum_size = Vector2i(200, 50)
offset_left = 150.0
offset_top = 262.0
offset_right = 350.0
offset_bottom = 312.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ktrah")
theme_override_font_sizes/font_size = 24
text = "Return"
